welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: type mismatch;
 found   : Int
 required: Boolean
		case (w,x,y,z) if (equalOk==false && a<b<c) => return true
                                                         ^